--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,34 @@
- spring.profiles.active=prod
+# 日志配置
+logging.config=classpath:logback.xml
+
+# 服务器配置
+server.port=8080
+
+# 数据源配置
+hive.datasource.hive.url=jdbc:hive2://10.252.42.109:2181,10.252.42.106:2181,10.252.42.111:2181,10.252.42.164:2181,10.252.42.166:2181,10.252.42.167:2181,10.252.42.173:2181,10.252.42.135:2181,10.252.42.121:2181/dim?connectTimeout=60000&socketTimeout=60000;serviceDiscoveryMode=zookeeper;zooKeeperNamespace=hiveserver2;principal=hive/schadoop@SCKDC?tez.queue.name=root.bdoc.production
+
+separator=100
+authSrvUrl=http://10.252.15.211:9010/Adapter/getKey.do
+
+# 身份认证配置
+authentication.type=kerberos
+#认证服务器配置文件路径（改）
+authentication.kerberos.krb5FilePath=/home/api/cfg/krb5.conf
+#认证主体（改）
+authentication.kerberos.principal=production@SCKDC
+#认证使用的keytab文件（改）
+authentication.kerberos.keytab=/home/api/cfg/production.keytab
+#csv文件源路径
+sftp.locacsvpath=/home/api/
+#csv文件远程存储路径
+sftp.remotepath=/home/api/
+#sftp服务ip
+sftp.host=127.0.0.1
+#sftp服务账号
+sftp.account=ceshi
+#sftp服务密码
+sftp.password=ceshi
+#sftp服务端口
+sftp.port=22
+#是否开启sftp上传
+sftp.isSftp=false
