[feat][]1.添加异步 2.添加head

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ server.port=8080
 hive.datasource.hive.url=jdbc:hive2://10.252.42.109:2181,10.252.42.106:2181,10.252.42.111:2181,10.252.42.164:2181,10.252.42.166:2181,10.252.42.167:2181,10.252.42.173:2181,10.252.42.135:2181,10.252.42.121:2181/dim?connectTimeout=60000&socketTimeout=60000;serviceDiscoveryMode=zookeeper;zooKeeperNamespace=hiveserver2;principal=hive/schadoop@SCKDC?tez.queue.name=root.bdoc.production
 
 separator=100
+#接口请求超时时间（单位秒）
+req.time_out=30
 authSrvUrl=http://10.252.15.211:9010/Adapter/getKey.do
 
 # 身份认证配置
