--- a/pom.xml
+++ b/pom.xml
@@ -494,7 +494,13 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
-        <!--<dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+		<!--<dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.11</version>
