[fix][]添加行业接口

--- a/src/main/resources/servicebean.properties
+++ b/src/main/resources/servicebean.properties
@@ -29,3 +29,81 @@ api0028=d_url
 api0029=m_url
 api0030=d_app
 api0031=m_app
+api0032=d_all
+api0033=m_all
+api0034=d_all
+api0035=m_all
+api0036=d_all
+api0037=m_all
+api0038=d_all
+api0039=m_all
+api0040=d_all
+api0041=m_all
+api0042=d_all
+api0043=m_all
+api0044=d_all
+api0045=m_all
+api0046=d_all
+api0047=m_all
+api0048=d_all
+api0049=m_all
+api0050=d_all
+api0051=m_all
+api0052=d_all
+api0053=m_all
+api0054=d_all
+api0055=m_all
+api0056=d_all
+api0057=m_all
+api0058=d_all
+api0059=m_all
+api0060=d_all
+api0061=m_all
+api0062=d_all
+api0063=m_all
+api0064=d_all
+api0065=m_all
+api0066=d_all
+api0067=m_all
+api0068=d_all
+api0069=m_all
+api0070=d_all
+api0071=m_all
+api0072=d_all
+api0073=m_all
+api0074=d_all
+api0075=m_all
+api0076=d_all
+api0077=m_all
+api0078=d_all
+api0079=m_all
+api0080=d_all
+api0081=m_all
+api0082=d_all
+api0083=m_all
+api0084=d_all
+api0085=m_all
+api0086=d_all
+api0087=m_all
+api0088=d_all
+api0089=m_all
+api0090=d_all
+api0091=m_all
+api0092=d_all
+api0093=m_all
+api0094=d_all
+api0095=m_all
+api0096=d_all
+api0097=m_all
+api0098=d_all
+api0099=m_all
+api0100=d_all
+api0101=m_all
+api0102=d_all
+api0103=m_all
+api0104=d_all
+api0105=m_all
+api0106=d_all
+api0107=m_all
+api0108=d_all
+api0109=m_all
