--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,17 @@ server.port=8080
 # 数据源配置
 hive.datasource.hive.url=jdbc:hive2://10.252.42.109:2181,10.252.42.106:2181,10.252.42.111:2181,10.252.42.164:2181,10.252.42.166:2181,10.252.42.167:2181,10.252.42.173:2181,10.252.42.135:2181,10.252.42.121:2181/dim?connectTimeout=60000&socketTimeout=60000;serviceDiscoveryMode=zookeeper;zooKeeperNamespace=hiveserver2;principal=hive/schadoop@SCKDC?tez.queue.name=root.bdoc.production
 
+
+hbase.zookeeper.quorum=hebsjzx-schbase-master-47-158,hebsjzx-schbase-master-47-75,hebsjzx-schbase-master-47-96
+hbase.zookeeper.property.clientPort=2181
+zookeeper.znode.parent=/hbase-secure
+hbase.hbase-site.path=/usr/bch/3.0.1/hbase/conf/hbase-site.xml
+hbase.authentication.kerberos.keytab=/home/bdi/api/program/production.keytab
+hbase.authentication.kerberos.krb5FilePath=/home/bdi/api/program/krb5.conf
+hbase.authentication.kerberos.principal=production@SCKDC
+
+
+
 separator=100
 
 #等待sql校验延迟时间（单位:秒）
