--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,9 +12,7 @@ hbase.zookeeper.quorum=hebsjzx-schbase-master-47-158,hebsjzx-schbase-master-47-7
 hbase.zookeeper.property.clientPort=2181
 zookeeper.znode.parent=/hbase-secure
 hbase.hbase-site.path=/usr/bch/3.0.1/hbase/conf/hbase-site.xml
-hbase.authentication.kerberos.keytab=/home/bdi/api/program/production.keytab
-hbase.authentication.kerberos.krb5FilePath=/home/bdi/api/program/krb5.conf
-hbase.authentication.kerberos.principal=production@SCKDC
+hbase.is_hbase=false
 
 
 
