--- a/src/main/resources/servicebean.properties
+++ b/src/main/resources/servicebean.properties
@@ -1,112 +1,114 @@
-api0001=d_url
-api0002=d_app
-api0003=d_keyword
-api0004=d_url
-api0005=d_app
-api0006=d_keyword
+api0001=tv_event_nl_indu
+api0002=tv_event_nl_indu
+api0003=tv_event_nl_indu
+api0004=tv_event_nl_indu
+api0005=tv_event_nl_indu
+api0006=tv_event_nl_indu
 api0007=dim
-api0008=d_url
-api0009=m_url
-api0010=d_app
-api0011=m_app
-api0012=m_url
-api0013=m_app
-api0014=m_url
-api0015=m_app
-api0016=d_url
-api0017=m_url
-api0018=d_app
-api0019=m_app
-api0020=d_url
-api0021=m_url
-api0022=d_app
-api0023=m_app
-api0024=d_url
-api0025=m_url
-api0026=d_app
-api0027=m_app
-api0028=d_url
-api0029=m_url
-api0030=d_app
-api0031=m_app
-api0032=d_all
-api0033=m_all
-api0034=d_all
-api0035=m_all
-api0036=d_all
-api0037=m_all
-api0038=d_all
-api0039=m_all
-api0040=d_all
-api0041=m_all
-api0042=d_all
-api0043=m_all
-api0044=d_all
-api0045=m_all
-api0046=d_all
-api0047=m_all
-api0048=d_all
-api0049=m_all
-api0050=d_all
-api0051=m_all
-api0052=d_all
-api0053=m_all
-api0054=d_all
-api0055=m_all
-api0056=d_all
-api0057=m_all
-api0058=d_all
-api0059=m_all
-api0060=d_all
-api0061=m_all
-api0062=d_all
-api0063=m_all
-api0064=d_all
-api0065=m_all
-api0066=d_all
-api0067=m_all
-api0068=d_all
-api0069=m_all
-api0070=d_all
-api0071=m_all
-api0072=d_all
-api0073=m_all
-api0074=d_all
-api0075=m_all
-api0076=d_all
-api0077=m_all
-api0078=d_all
-api0079=m_all
-api0080=d_all
-api0081=m_all
-api0082=d_all
-api0083=m_all
-api0084=d_all
-api0085=m_all
-api0086=d_all
-api0087=m_all
-api0088=d_all
-api0089=m_all
-api0090=d_all
-api0091=m_all
-api0092=d_all
-api0093=m_all
-api0094=d_all
-api0095=m_all
-api0096=d_all
-api0097=m_all
-api0098=d_all
-api0099=m_all
-api0100=d_all
-api0101=m_all
-api0102=d_all
-api0103=m_all
-api0104=d_all
-api0105=m_all
-api0106=d_all
-api0107=m_all
-api0108=d_all
-api0109=m_all
+api0008=tv_event_nl_indu
+api0009=tv_event_nl_indu
+api0010=tv_event_nl_indu
+api0011=tv_event_nl_indu
+api0012=tv_event_nl_indu
+api0013=tv_event_nl_indu
+api0014=tv_event_nl_indu
+api0015=tv_event_nl_indu
+api0016=tv_event_nl_indu
+api0017=tv_event_nl_indu
+api0018=tv_event_nl_indu
+api0019=tv_event_nl_indu
+api0020=tv_event_nl_indu
+api0021=tv_event_nl_indu
+api0022=tv_event_nl_indu
+api0023=tv_event_nl_indu
+api0024=tv_event_nl_indu
+api0025=tv_event_nl_indu
+api0026=tv_event_nl_indu
+api0027=tv_event_nl_indu
+api0028=tv_event_nl_indu
+api0029=tv_event_nl_indu
+api0030=tv_event_nl_indu
+api0031=tv_event_nl_indu
+api0032=tv_event_nl_indu
+api0033=tv_event_nl_indu
+api0034=tv_event_nl_indu
+api0035=tv_event_nl_indu
+api0036=tv_event_nl_indu
+api0037=tv_event_nl_indu
+api0038=tv_event_nl_indu
+api0039=tv_event_nl_indu
+api0040=tv_event_nl_indu
+api0041=tv_event_nl_indu
+api0042=tv_event_nl_indu
+api0043=tv_event_nl_indu
+api0044=tv_event_nl_indu
+api0045=tv_event_nl_indu
+api0046=tv_event_nl_indu
+api0047=tv_event_nl_indu
+api0048=tv_event_nl_indu
+api0049=tv_event_nl_indu
+api0050=tv_event_nl_indu
+api0051=tv_event_nl_indu
+api0052=tv_event_nl_indu
+api0053=tv_event_nl_indu
+api0054=tv_event_nl_indu
+api0055=tv_event_nl_indu
+api0056=tv_event_nl_indu
+api0057=tv_event_nl_indu
+api0058=tv_event_nl_indu
+api0059=tv_event_nl_indu
+api0060=tv_event_nl_indu
+api0061=tv_event_nl_indu
+api0062=tv_event_nl_indu
+api0063=tv_event_nl_indu
+api0064=tv_event_nl_indu
+api0065=tv_event_nl_indu
+api0066=tv_event_nl_indu
+api0067=tv_event_nl_indu
+api0068=tv_event_nl_indu
+api0069=tv_event_nl_indu
+api0070=tv_event_nl_indu
+api0071=tv_event_nl_indu
+api0072=tv_event_nl_indu
+api0073=tv_event_nl_indu
+api0074=tv_event_nl_indu
+api0075=tv_event_nl_indu
+api0076=tv_event_nl_indu
+api0077=tv_event_nl_indu
+api0078=tv_event_nl_indu
+api0079=tv_event_nl_indu
+api0080=tv_event_nl_indu
+api0081=tv_event_nl_indu
+api0082=tv_event_nl_indu
+api0083=tv_event_nl_indu
+api0084=tv_event_nl_indu
+api0085=tv_event_nl_indu
+api0086=tv_event_nl_indu
+api0087=tv_event_nl_indu
+api0088=tv_event_nl_indu
+api0089=tv_event_nl_indu
+api0090=tv_event_nl_indu
+api0091=tv_event_nl_indu
+api0092=tv_event_nl_indu
+api0093=tv_event_nl_indu
+api0094=tv_event_nl_indu
+api0095=tv_event_nl_indu
+api0096=tv_event_nl_indu
+api0097=tv_event_nl_indu
+api0098=tv_event_nl_indu
+api0099=tv_event_nl_indu
+api0100=tv_event_nl_indu
+api0101=tv_event_nl_indu
+api0102=tv_event_nl_indu
+api0103=tv_event_nl_indu
+api0104=tv_event_nl_indu
+api0105=tv_event_nl_indu
+api0106=tv_event_nl_indu
+api0107=tv_event_nl_indu
+api0108=tv_event_nl_indu
+api0109=tv_event_nl_indu
+api0110=tv_event_nl_indu
+api0111=tv_event_nl_indu
 s_0001=tw_dt
 s_0002=tw_dt
 s_0003=tv_m
