[fix][]修改业务逻辑

--- a/src/main/resources/mandatoryparam.properties
+++ b/src/main/resources/mandatoryparam.properties
@@ -4,3 +4,6 @@ tv_dim=time_id
 tv_event=TIME_ID,PROV_ID,POI_CLS_CODE
 #同步全行业必选参数
 tv_evnt=SERV_NUMBER,TIME_ID
+#同步全行业参数
+tv_evet_param=SERV_NUMBER,TIME_ID,PROV_ID,HOME_AREA_ID,POI_CLS1_CODE,POI_CLS2_CODE,POI_CLS3_CODE,POI_CLS4_CODE,POI_CLS5_CODE
+
