[fix][]修改业务逻辑

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ hbase.zookeeper.quorum=hebsjzx-schbase-master-47-158,hebsjzx-schbase-master-47-7
 hbase.zookeeper.property.clientPort=2181
 zookeeper.znode.parent=/hbase-secure
 hbase.hbase-site.path=/usr/bch/3.0.1/hbase/conf/hbase-site.xml
-hbase.is_hbase=false
+hbase.is_hbase=true
 
 
 
