--- a/src/main/resources/mandatoryparam.properties
+++ b/src/main/resources/mandatoryparam.properties
@@ -6,4 +6,9 @@ tv_event=TIME_ID,PROV_ID,POI_CLS_CODE
 tv_evnt=SERV_NUMBER,TIME_ID
 #同步全行业参数
 tv_evet_param=SERV_NUMBER,TIME_ID,PROV_ID,HOME_AREA_ID,POI_CLS1_CODE,POI_CLS2_CODE,POI_CLS3_CODE,POI_CLS4_CODE,POI_CLS5_CODE
-
+#青海同步必选参数
+to_m_evnt=SERV_NUMBER,START_TIME,END_TIME
+#云南安保APP
+tw_app_yn=REG_ID,INDEX_ID,INDEX_CODE,STAT_DATE
+#关键词搜索
+tw_search_yn=REG_ID,STAT_DAY,SRH_WORD
