--- a/src/main/resources/tablename.properties
+++ b/src/main/resources/tablename.properties
@@ -113,3 +113,6 @@ s_0001=TW_DT_EVNT_NL_INDU_ALL_SUM_A
 s_0002=TW_DT_EVNT_NL_INDU_ALL_SUM_A
 s_0003=TV_M_EVNT_NL_INDU_ALL_SUM_A
 s_0004=TV_M_EVNT_NL_INDU_ALL_SUM_A
+s_0005=TO_M_EVNT_NL_USER_DUFLUX
+s_0006=TW_APP_EVNT_YN
+s_0007=TW_SEARCH_EVNT_YN
